--- a/website/style/main.css
+++ b/website/style/main.css
@@ -14,6 +14,54 @@
   background-size: 100%!important;
   background-position: 5% 50%!important;
 }
+.img1{
+  position: relative;
+  background-image: url(/assets/images/approaching.png);
+  background-repeat-x: no-repeat;
+  background-repeat-y: no-repeat;
+  background-attachment: initial;
+  background-origin: initial;
+  background-clip: initial;
+  background-color: initial;
+  background-size: cover;
+  will-change: transform,top;
+  height: 20vh;
+  left: 0;
+  background-size: 100%!important;
+  background-position: 5% 50%!important;
+}
+.img2{
+  position: relative;
+  background-image: url(/assets/images/previous_bus_stop.png);
+  background-repeat-x: no-repeat;
+  background-repeat-y: no-repeat;
+  background-attachment: initial;
+  background-origin: initial;
+  background-clip: initial;
+  background-color: initial;
+  background-size: cover;
+  will-change: transform,top;
+  height: 20vh;
+  left: 0;
+  background-size: 100%!important;
+  background-position: 5% 50%!important;
+}
+.img3{
+  position: relative;
+  background-image: url(/assets/images/estimated_arriving_time.png);
+  background-repeat-x: no-repeat;
+  background-repeat-y: no-repeat;
+  background-attachment: initial;
+  background-origin: initial;
+  background-clip: initial;
+  background-color: initial;
+  background-size: cover;
+  will-change: transform,top;
+  height: 20vh;
+  left: 0;
+  background-size: 100%!important;
+  background-position: 5% 50%!important;
+}
 
 .img .content{
      position: absolute;
